fix: misalign vertical scroll

--- a/src/style.css
+++ b/src/style.css
@@ -30,7 +30,8 @@
 
 .panel-content {
   height: 100%;
-  overflow-y: scroll;
+  overflow-y: auto;
+  overflow-x: hidden;
 }
 
 .panel-content > h1 {
@@ -498,7 +499,6 @@
   background-color: #f4f5f8;
   height: 35px;
   align-items: stretch;
-  margin: 0 -6px;
   padding-left: 0;
   position: relative;
   z-index: 2;
@@ -597,6 +597,7 @@
 .examples-code-container {
   height: 500px;
   overflow-y: auto;
+  overflow-x: auto;
   background-color: #ffffff;
 }
 
@@ -705,6 +706,7 @@
   transform: translateX(100%);
 }
 
-.panel-wrapper-collapsed .panel-toggle-btn:hover + .panel-collapsed {
+.panel-wrapper-collapsed .panel-toggle-btn:hover + .panel-collapsed,
+.panel-wrapper-collapsed .panel-collapsed:hover {
   transform: translateX(0);
 }
